<resources>
    <string name="app_name">まとめてカレンダー</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_preset_button">プリセット</string>
    <string name="add_camera_button">カメラ</string>
    <string name="add_multiple_plans_button">まとめて追加</string>
    <string name="title_hint_text">タイトルを入力</string>
    <string name="start_time_text">開始</string>
    <string name="end_time_text">終了</string>
    <string name="use_time_text">所要時間</string>
    <string name="type_text">カテゴリー</string>
    <string name="income_price_text">収入</string>
    <string name="spending_price_text">支出</string>
    <string name="memo_hint_text">メモを追加</string>
    <string name="zero_enn">0円</string>
    <string name="cancel_Text">キャンセル</string>
    <string name="storage_text">保存</string>
    <string name="add_preset_text">プレセットを追加する</string>
    <string name="plan_title_text">予定名</string>
    <string name="title_edit_hint">予定を追加</string>
    <string name="read_button_text">読み込み</string>
    <string name="delete_multiple_plans_button">まとめて削除</string>
    <string name="delete_text">削除</string>
    <string name="update_button_text">編集する</string>
    <string name="start_set_time_text">開始時間を設定</string>
    <string name="use_set_time_text">所要時間を設定</string>
    <string name="placeText">場所</string>
    <string name="tool_text">道具</string>
    <string name="check_text">終了を確認</string>
    <string name="repeat_text">繰り返し</string>
    <string name="notice_text">通知</string>
    <string name="check_on">する</string>
    <string name="check_off">しない</string>

    <string-array name="notice_items">
        <item>通知しない</item>
        <item>予定の時間</item>
        <item>5分前</item>
        <item>10分前</item>
        <item>15分前</item>
        <item>30分前</item>
        <item>1時間前</item>
        <item>予定の日</item>
        <item>カスタム</item>
    </string-array>

</resources>
