<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@drawable/shape_rounded_corners_5dp"
    tools:context=".activities.AddPlanActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_Text"
            android:layout_gravity="start"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/blackColor"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/storage_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storage_text"
            android:clickable="true"
            android:layout_gravity="end"
            android:focusable="true" />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/planTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:hint="@string/title_hint_text"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/startTimeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planTitle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time_text"
            android:textColor="@color/blackColor" />

        <TextView
            android:id="@+id/startTimeText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/start_set_time_text"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/endTimeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blackColor"
            android:text="@string/end_time_text" />

        <TextView
            android:id="@+id/endTimeText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/useTimeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTimeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_time_text"
            android:textColor="@color/blackColor" />

        <Spinner
            android:id="@+id/useTimeSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="end"
            android:text="@string/use_set_time_text"
            android:layout_marginStart="8dp"
            />

    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:id="@+id/repeatLayout"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:padding="8dp"-->
        <!--android:clickable="true"-->
        <!--android:focusable="true"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/useTimeLayout">-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/repeat_text"-->
        <!--android:textColor="@color/blackColor" />-->

    <!--<TextView-->
        <!--android:id="@+id/repeatText"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="end"-->
        <!--android:layout_marginStart="8dp"/>-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:id="@+id/noticeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/useTimeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_text"
            android:textColor="@color/blackColor" />

        <Spinner
            android:id="@+id/noticeSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:background="@null"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/typeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noticeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_text"
            android:textColor="@color/blackColor" />

        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="end"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reviewLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income_price_text"
        android:textColor="@color/blackColor" />

    <Spinner
        android:id="@+id/reviewSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/incomePriceLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income_price_text"
            android:textColor="@color/blackColor" />

        <TextView
            android:id="@+id/incomePriceText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/zero_enn"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/spendingPriceLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomePriceLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spending_price_text"
            android:textColor="@color/blackColor" />

        <TextView
            android:id="@+id/spendingPriceText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/zero_enn"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/placeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spendingPriceLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeText"
            android:textColor="@color/blackColor" />

        <TextView
            android:id="@+id/placeText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/zero_enn"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/toolLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tool_text"
            android:textColor="@color/blackColor" />

        <TextView
            android:id="@+id/toolText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/zero_enn"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_text"
            android:textColor="@color/blackColor" />

        <Switch
            android:id="@+id/checkSwitch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textOn="@string/check_on"
            android:textOff="@string/check_off"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/memoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:hint="@string/memo_hint_text"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkLayout" />

</android.support.constraint.ConstraintLayout>